--- a/Week_05/spring-demo/build.gradle
+++ b/Week_05/spring-demo/build.gradle
@@ -10,7 +10,9 @@ repositories {
 dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     compile 'com.zaxxer:HikariCP:3.1.0'
-    compile 'starter-demo'
+    compile 'org.springframework.boot:spring-boot-starter-jdbc'
+   // compile("org.springframework.boot:spring-boot-starter-data-jpa")
+//    compile 'starter-demo'
 
 }
 
